--- a/src/style/color.scss
+++ b/src/style/color.scss
@@ -2,5 +2,6 @@ $color-main: #fff;
 $color-white: #fafafa;
 $color-gray: #afafaf;
 $color-right-gray: #e4e4e4;
+$color-right-gray-transparent: #e4e4e480;
 $color-blue: #2ca9de;
 $color-red: #ee4c3d;
