feat: 書き出し、読み込みの追加

--- a/src/style/color.scss
+++ b/src/style/color.scss
@@ -3,5 +3,6 @@ $color-white: #fafafa;
 $color-gray: #afafaf;
 $color-right-gray: #e4e4e4;
 $color-right-gray-transparent: #e4e4e480;
+$color-black: #3e3e3e;
 $color-blue: #2ca9de;
 $color-red: #ee4c3d;
