fix: リストのデザインの修正

--- a/src/style/color.scss
+++ b/src/style/color.scss
@@ -5,3 +5,4 @@ $color-right-gray: #e4e4e4;
 $color-right-gray-transparent: #e4e4e480;
 $color-blue: #2ca9de;
 $color-red: #ee4c3d;
+$color-border: #00000080;;
